--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,12 @@ dependencies:
   flutter_email_validator: ^2.1.24
   pinput: ^4.0.0
   flutter_timer_countdown: ^1.0.7
-
+  timer_count_down: ^2.2.2
+  loading_animation_widget: ^1.2.1
+  flutter_spinkit: ^5.0.0
+  standard_dialogs: ^2.1.0
+  crypto: ^3.0.0
+  bcrypt: ^1.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/
+    - lib/assets/warning.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
