--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   standard_dialogs: ^2.1.0
   crypto: ^3.0.0
   bcrypt: ^1.1.3
+  flutter_responsive_framework: ^0.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
