--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -48,6 +49,13 @@ dependencies:
   crypto: ^3.0.0
   bcrypt: ^1.1.3
   flutter_responsive_framework: ^0.0.2
+  flutter_colorpicker: ^1.0.3
+  swipeable_button_view: ^0.0.2
+  page_transition: ^2.1.0
+
+  intl: ^0.18.1
+  image_picker: ^1.1.1
+  flutter_quill: ^9.3.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
