--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   intl: ^0.18.1
   image_picker: ^1.1.1
   flutter_quill: ^9.3.10
+  dio: ^5.4.3+1
+  firebase_core: ^2.31.0
+  firebase_storage: ^11.7.5
+  languagetool_textfield: ^0.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
